--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "babel-preset-react": "~6.24.1",
-    "prop-types": "~15.6.0",
+    "dayjs": "^1.8.15",
+    "prop-types": "~15.6.1",
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
     "react-router-dom": "^5.0.1",
