--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@rails/webpacker": "3.5",
     "babel-preset-react": "~6.24.1",
     "dayjs": "^1.8.15",
+    "es6-promise": "^4.2.8",
+    "isomorphic-fetch": "^2.2.1",
     "prop-types": "~15.6.1",
     "react": "~15.4.2",
     "react-dom": "~15.4.2",
